src/flusher.h
@@ -105,7 +105,10 @@ private:
     }
 
     EventuallyPersistentStore   *store;
-    volatile enum flusher_state  _state;
+    AtomicValue<enum flusher_state> _state;
+
+    // Used for serializaling attempts to start the flusher from
+    // different threads.
     Mutex                        taskMutex;
     size_t                       taskId;
 
